Enable testing that a warning is emitted